[project]
name = "twitter-analysis"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "gensim>=4.4.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "nltk>=3.9.2",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "pyldavis>=3.4.1",
    "textblob>=0.19.0",
]
